ecmascript/parser/tests/test262-error-references/fail/8a91dde242686a52.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/8a91dde242686a52.js:1:4
  |
1 | ({a.b} = 0)
  |    ^

